2.4.7
- add bottle of curse and bottle of sanity
- add curse of 7 sins (7 items)

2.4.6
- Fix MobCapLootCondition
- Add weapon config
- Add entity config, remove entityMap from difficulty config
- Add multi-trait conditions JEI support and examples
- Add default configs for Twilight Forest mobs

2.4.5
- Fix chunk not marked dirty when using hostility orb

2.4.4
- Change default config values (delete old config file to take effect)
- Add command system
- Increase levels required by traits for most traits
- Fix the bug that spawner might spawn mobs with no traits if trait spawn chance is not 100%
- Change Invisibility drop from potion to phantom membrane
- Mobs that cannot attack nearest player will not have a level
- Adds default dimension difficulty
- Add options for minimum level to be bypassed by difficulty clearing or not
- Add suppression mechanics: mobs will randomly terminate trait generation with a chance
- Mobs with non-zero minimum level will not be affected by supression, apply chance, and trait chance

2.4.3
- Regenerate will not appear on mobs immune to effects
- Tune down difficulty in general
- Reduce chance for Weakness and Levitation to appear

2.4.2
- Undying will not appear on mobs immune to effects

2.4.1
- Fix the bug that Legendary traits won't spawn
- Reduce Reflective damage
- Increase Reflective and Adaptive level cost