@@ -52,7 +52,7 @@
   "l2hostility.item.wand.ai": "˙IⱯ qoɯ ǝɹoʇsǝɹ ɹo ǝʌoɯǝɹ oʇ ʞɔıןɔ ʇɥbıᴚ",
   "l2hostility.item.wand.equipment": "˙nuǝɯ ʇuǝɯdınbǝ qoɯ uǝdo oʇ ʞɔıןɔ ʇɥbıᴚ",
   "l2hostility.item.wand.target": "˙ɹǝɥʇo ɥɔɐǝ ʇɥbıɟ ɯǝɥʇ ǝʞɐɯ oʇ sqoɯ ᄅ ʞɔıןɔ ʇɥbıᴚ",
-  "l2hostility.jei.loot_chance": "%s ʞuɐɹ %s ɹoɟ ǝɔuɐɥɔ %s%%",
+  "l2hostility.jei.loot_chance": "%s ʞuɐɹ %s ɹoɟ ǝɔuɐɥɔ %s",
   "l2hostility.jei.loot_title": "ʇooꞀ ʇıɐɹ⟘",
   "l2hostility.jei.min_level": "ɹǝɥbıɥ ɹo %s ןǝʌǝן ɥʇıʍ sqoɯ uo sdoɹᗡ",
   "l2hostility.jei.other_trait": "%s ʞuɐɹ ʇɐ %s sǝɹınbǝᴚ",
