@@ -84,11 +84,15 @@ public class GLMRecipeCategory extends BaseRecipeCategory<TraitLootModifier, GLM
 			}
 		}
 		if (minLevel > 0) {
-			list.add(LangData.LOOT_MIN_LEVEL.get(minLevel).withStyle(ChatFormatting.LIGHT_PURPLE));
+			list.add(LangData.LOOT_MIN_LEVEL.get(Component.literal(minLevel + "").withStyle(ChatFormatting.AQUA)).withStyle(ChatFormatting.LIGHT_PURPLE));
 		}
 		for (int lv = min; lv <= max; lv++) {
-			list.add(LangData.LOOT_CHANCE.get(Math.round((recipe.chance + recipe.rankBonus * lv) * 100), recipe.trait.getFullDesc(null), lv)
-					.withStyle(ChatFormatting.AQUA));
+			list.add(LangData.LOOT_CHANCE.get(
+							Component.literal(Math.round((recipe.chance + recipe.rankBonus * lv) * 100) + "%")
+									.withStyle(ChatFormatting.AQUA),
+							recipe.trait.getDesc().withStyle(ChatFormatting.GOLD),
+							Component.literal(lv + "").withStyle(ChatFormatting.AQUA))
+					.withStyle(ChatFormatting.GRAY));
 		}
 		for (var c : other) {
 			int cmin = Math.max(c.minLevel, 1);
@@ -98,7 +102,9 @@ public class GLMRecipeCategory extends BaseRecipeCategory<TraitLootModifier, GLM
 					cmax >= c.trait.getMaxLevel() ?
 							cmin + "+" :
 							cmin + "-" + cmax;
-			list.add(LangData.LOOT_OTHER_TRAIT.get(c.trait.getFullDesc(null), str).withStyle(ChatFormatting.RED));
+			list.add(LangData.LOOT_OTHER_TRAIT.get(c.trait.getDesc().withStyle(ChatFormatting.GOLD),
+							Component.literal(str).withStyle(ChatFormatting.AQUA))
+					.withStyle(ChatFormatting.RED));
 		}
 	}
 
