@@ -1,5 +1,5 @@
 {
   "name": "Equipments & Consumables",
   "description": "Items that may assist you in combat or survival",
-  "icon": "l2hostility:detector"
+  "icon": "l2hostility:hostility_detector"
 }
