@@ -1,6 +1,8 @@
 2.4.7
 - add bottle of curse and bottle of sanity
 - add curse of 7 sins (7 items)
+- add patchouli for items
+- improve JEI tooltip visuals
 
 2.4.6
 - Fix MobCapLootCondition
